# NumberCruncher

./: .gitignore  README.md  pyproject.toml
docs/src_docs/: countdown_hs_doc.md  countdown_pl_doc.md  countdown_py_doc.md  run_all_sh_doc.md  tui_py_doc.md
docs/tests_docs/: test_haskell_solver_doc.md  test_orchestration_doc.md  test_prolog_solver_doc.md  test_python_solver_doc.md
src/: README.md  __init__.py
src/haskell/: Makefile  README.md  __init__.py  countdown.hs
src/prolog/: README.md  __init__.py  countdown.pl
src/python/: README.md  __init__.py  countdown.py
src/tui_wraper/: README.md  __init__.py  run_all.sh  tui.py
tests/: README.md  __init__.py  test_haskell_solver.py  test_orchestration.py  test_prolog_solver.py  test_python_solver.py
